--- a/mobileStyle.css
+++ b/mobileStyle.css
@@ -37,7 +37,7 @@ footer>p {
     font-size: 15px;
 	margin: 8px;
 }
-.details{
+#details{
 	display: flex;
 	flex-direction: column;
     justify-content: center;
