--- a/style.css
+++ b/style.css
@@ -1,68 +1,64 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-    font-family: 'Roboto', sans-serif;
-} */
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 body{
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
 }
-.nav-bar > h1{
-    margin: 0px;
-}
-
-/* body {
-    display: max-width=380;
-} */
-
 .nav-bar {
-    /* height: 100px; */
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     color: rgb(255, 255, 255);
+    display: flex;
+    justify-content: space-between;
 }
-
 .nav-bar>h1 {
+    margin: 0px;
     padding: 30px;
 }
-
-/* isper lagani hy media querry */
+.nav-bar>#dateDiv{
+    padding: 22px;
+    text-transform: uppercase;
+}
+.nav-bar>#dateDiv>div{
+    margin: 8px;
+}
 .body_padding_div {
-    /* margin-left: 20%;
-    margin-right: 20%; */
-    /* overflow: visible; */
     height: 100vh;
 }
-
-.formm {
+.form {
     margin: 25px;
     display: flex;
     justify-content: center;
 }
-
-/* .formm>button {
-    border-radius: 50px;
-    padding: 15px;
-} */
-
 #city {
     padding: 15px;
     border-radius: 50px;
     font-size: 18px;
-}
+    background-color: rgba(0, 0, 0 ,0.5);
+    color: #ffffff;
+    border: none;
+    text-align: center;
 
-/* div{    border: 2px solid red  ;} */
+}
+::-webkit-input-placeholder { /* Edge */
+    color: red;
+  }
+::placeholder {
+    color: rgb(255, 255, 255);
+    /* text-align: center; */
+  }
 #tempC {
     font-size: 150px;
     font-weight: bold;
-    color: rgb(80, 77, 77);
+    color: rgb(14, 14, 14);
     margin-left: 10px;
 }
-
-.main_container {
+#main_container {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 18px;
     padding: 18px;
 }
@@ -86,50 +82,37 @@ body{
     display: flex;
     justify-content: space-around;
 }
-
-
-
-
-
 /* footer */
 .iconscontainer {
     list-style: none;
     display: flex;
     fill: #ffffff;
     margin: 15px;
-    /* width: 20px; */
 }
-
 .icon {
     padding-right: 13px;
     fill: white;
     width: 18px;
     cursor: pointer;
 }
-
 .icon:hover {
     fill: #fffc3a;
 }
-
 footer {
-
     /* position: sticky; */
-    /* position: absolute; */
-    /* display: hidden; */
     display: flex;
     justify-content: center;
-    /* bottom: 0; */
+    align-items: center;
     width: 100%;
     height: 25px;
-    background: rgb(14, 154, 224);
+    background: rgba(14, 154, 224,0.4);
+    backdrop-filter: blur(5px);
     padding: 18px 0px;
-    align-items: center;
 }
-
-
 footer>p {
     color: white;
-    /* padding-top: 15px; */
-    /* padding-bottom: 15px; */
     font-size: 20px;
 } 
+body {
+	background-image: url('https://source.unsplash.com/1600x900/?weather');
+}
