--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-body{
+
+body {
     margin: 0px;
     font-family: 'Roboto', sans-serif;
 }
+
 .nav-bar {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -12,48 +14,59 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
 .nav-bar>h1 {
     margin: 0px;
     padding: 30px;
 }
-.nav-bar>#dateDiv{
+
+.nav-bar>#dateDiv {
     padding: 22px;
     text-transform: uppercase;
 }
-.nav-bar>#dateDiv>div{
+
+.nav-bar>#dateDiv>div {
     margin: 8px;
 }
+
 .body_padding_div {
     height: 100vh;
 }
+
 .form {
     margin: 25px;
     display: flex;
     justify-content: center;
 }
+
 #city {
     padding: 15px;
     border-radius: 50px;
     font-size: 18px;
-    background-color: rgba(0, 0, 0 ,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     color: #ffffff;
     border: none;
     text-align: center;
 
 }
-::-webkit-input-placeholder { /* Edge */
+
+::-webkit-input-placeholder {
+    /* Edge */
     color: red;
-  }
+}
+
 ::placeholder {
     color: rgb(255, 255, 255);
     /* text-align: center; */
-  }
+}
+
 #tempC {
     font-size: 150px;
     font-weight: bold;
     color: rgb(14, 14, 14);
     margin-left: 10px;
 }
+
 #main_container {
     display: flex;
     justify-content: center;
@@ -62,16 +75,20 @@ body{
     margin: 18px;
     padding: 18px;
 }
-#weather_icon{
+
+#weather_icon {
     width: 172px;
 }
-#left, #right{
+
+#left,
+#right {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-#details{
+
+#details {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -82,6 +99,7 @@ body{
     display: flex;
     justify-content: space-around;
 }
+
 /* footer */
 .iconscontainer {
     list-style: none;
@@ -89,15 +107,18 @@ body{
     fill: #ffffff;
     margin: 15px;
 }
+
 .icon {
     padding-right: 13px;
     fill: white;
     width: 18px;
     cursor: pointer;
 }
+
 .icon:hover {
     fill: #fffc3a;
 }
+
 footer {
     /* position: sticky; */
     display: flex;
@@ -105,14 +126,18 @@ footer {
     align-items: center;
     width: 100%;
     height: 25px;
-    background: rgba(14, 154, 224,0.4);
+    background: rgba(14, 154, 224, 0.4);
     backdrop-filter: blur(5px);
     padding: 18px 0px;
 }
+
 footer>p {
     color: white;
     font-size: 20px;
-} 
+}
+
 body {
-	background-image: url('https://source.unsplash.com/1600x900/?weather');
+    background-image: url('https://source.unsplash.com/1600x900/?weather');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
