--- a/style.css
+++ b/style.css
@@ -59,10 +59,12 @@ body {
     color: rgb(255, 255, 255);
     /* text-align: center; */
 }
-.city_name{
+
+.city_name {
     color: rgb(255, 255, 255);
     text-shadow: 3px 3px 4px #000000;
 }
+
 #tempC {
     font-size: 150px;
     font-weight: bold;
@@ -70,11 +72,13 @@ body {
     margin-left: 10px;
     text-shadow: 2px 2px 8px #000000;
 }
-.parentDiv2{
+
+.parentDiv2 {
     color: rgb(255, 255, 255);
     text-shadow: 3px 3px 4px #000000;
 
 }
+
 #main_container {
     display: flex;
     justify-content: center;
@@ -87,19 +91,23 @@ body {
 #weather_icon {
     width: 172px;
 }
-#forecastDiv{
+
+#forecastDiv {
     display: flex;
     align-items: center;
     justify-content: center;
     /* border: 2px solid #fffc3a; */
     border-radius: 12px;
-    width: 80%;
+    width: 100%;
 }
-#myChart{
+
+#myChart {
     backdrop-filter: blur(5px);
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 12px;
+    width: 100px;
 }
+
 #left,
 #right {
     display: flex;
@@ -140,7 +148,8 @@ body {
 }
 
 footer {
-    /* position: sticky; */
+    position: fixed;
+    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
